--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <body style="background: url('https://cdn.pixabay.com/photo/2016/07/21/10/27/maldives-1532172_1280.jpg') no-repeat center center fixed; background-size: cover;">
 <div id="app">
-        <h1>Hi Steve, Have a great day!</h1>
+        <h1>Hi Mr.Woods, enjoy your vacation!</h1>
         <form id="weather-form">
             <input type="text" id="city-input" placeholder="Enter city name">
             <button type="submit">Weather</button>
